<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mwende.pioneergirls.TopicsActivity">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topic"
            android:text="@string/topicone"
            android:textSize="20sp"
            android:padding="3dp"
            android:textColor="#000102"
            android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_two"
                android:textSize="13sp"
                android:id="@+id/story"
                android:padding="10dp"
                android:layout_below="@+id/topic"
                android:textColor="#000102"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/topic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/story"
                android:padding="3dp"
                android:text="Importance of Education"
                android:textColor="#000102"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic4"
                android:textSize="13sp"
                android:padding="10dp"
                android:layout_below="@+id/topic2"
                android:textColor="#000102"
                android:textStyle="normal"/>




        </RelativeLayout>

    </ScrollView>



</RelativeLayout>
