<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Activity"
    android:id="@+id/coordinator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:id="@+id/login_frame"
            android:layout_width="fill_parent"
            android:layout_height="180dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorTeal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

        </FrameLayout>


        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="@dimen/lsize"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:gravity="center"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_selected"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SIGN IN"
                    android:textColor="@color/colorTeal"
                    android:textSize="@dimen/large_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SIGN UP"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/large_text_size" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/credentials"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_below="@+id/login_frame"
            android:padding="10dp">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:focusableInTouchMode="true"
                android:hint="@string/name"
                android:maxLines="1"
                android:nextFocusForward="@+id/user_email"
                android:textSize="13sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/line_name"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sep_width"
                android:layout_below="@id/user_name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlack"
                android:visibility="gone" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/user_password"
                android:textSize="13sp" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sep_width"
                android:layout_below="@+id/user_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlack" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/login"
                android:textSize="13sp" />

            <TextView
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/sep_width"
                android:layout_below="@+id/user_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorBlack" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_below="@+id/credentials"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_back"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/large_text_size" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login">

            <RelativeLayout

                android:id="@+id/socials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="23dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/facebook_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/facebook" />

                <ImageView
                    android:id="@+id/google_plus_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/google_plus" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="24dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/skip_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:text="@string/skip_for_now"
                    android:textColor="@color/colorBlack"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/terms"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp" />

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>